--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "bcrypt": "^5.1.1",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "mantine-form-zod-resolver": "^1.1.0",
     "next": "15.2.0",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
